# shci

./: .gitignore  CMakeLists.txt  README.md
.ShCI/: linux-log.md  windows-log.md
ShCI/include/: ShCI.h
ShCI/src/: ShCI.c
shci/c/: CMakeLists.txt
shci/python/: myrepo.txt  prerequisites.txt  shci-test.py  shci.py
